--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="online_music">在线音乐</string>
 
     <string name="song_title">空灵音乐</string>
+    <string name="title_activity_local_music">LocalMusicActivity</string>
 </resources>
