Fix LocalMusicFragment no data and delete LocalMusicAcitvity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="local_music">我的音乐</string>
+    <string name="local_music">本地音乐</string>
     <string name="online_music">在线音乐</string>
 
     <string name="song_title">空灵音乐</string>
