--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,31 @@
 <resources>
     <string name="app_name">空灵音乐</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_settings">Settings</string>
-
     <string name="local_music">本地音乐</string>
     <string name="online_music">在线音乐</string>
-
     <string name="song_title">空灵音乐</string>
-    <string name="title_activity_local_music">LocalMusicActivity</string>
+
+    <!--<string name="navigation_drawer_open">Open navigation drawer</string>-->
+    <!--<string name="navigation_drawer_close">Close navigation drawer</string>-->
+
+    <!--<string name="action_settings">Settings</string>-->
+
+    <!--<string name="title_activity_local_music">LocalMusicActivity</string>-->
+
+
+
+
+    <string name="setting_key_mobile_network_play">mobile_network_play</string>
+    <string name="setting_key_mobile_network_download">mobile_network_download</string>
+    <string name="setting_key_sound_effect">sound_effect</string>
+    <string name="setting_key_filter_size">filter_size</string>
+    <string name="setting_key_filter_time">filter_time</string>
+
+    <string name="network">网络</string>
+
+    <string name="mobile_network_play">使用移动网络播放</string>
+    <string name="mobile_network_download">使用移动网络下载</string>
+
+    <string name="play">播放</string>
+    <string name="sound_effect">音效调节</string>
 
 </resources>
